tweak to cinema screen layouts and start of fix for time alignment on segment change for game two

--- a/mla_game/front-end/scss/main.scss
+++ b/mla_game/front-end/scss/main.scss
@@ -26,9 +26,9 @@ html{
 body {
   position: relative;
   color:white;
-  @include susy-breakpoint($screen-jb-min) {
-    font-size:1.1em
-  }
+  // @include susy-breakpoint($screen-jb-min) {
+  //   font-size:1.1em
+  // }
 }
 
 a {
